# suse-support-material

./: Dockerfile  README.md  nessie.py  sess.go  sess.py
.github/workflows/: docker-build-ketchup.yaml  docker-build-nessie.yaml  docker-build-nessie.yaml.old
Elemental/: Classic Elemental.pptx
Elemental/Demo/: README.md  mgmt-installation-guide.md
Elemental/Demo/advanced/: demo-advanced-registration.yaml  demo-advanced-seedimage.yaml
Elemental/Demo/basic/: demo-registration.yaml  demo-seedimage.yaml
Elemental/Demo/custom/: Dockerfile  demo-custom-docker-registration.yaml  demo-custom-docker-seedimage.yaml  demo-custom-registration.yaml  demo-custom-seedimage.yaml
Elemental/Demo/os/: demo-os-registration.yaml  demo-os-seedimage.yaml  demo-os-upgrade-plan.yaml
Nessie/: Dockerfile  README.md  nessie.py
Notes/: KB-Edge-PTF.md  SF-Knowledge-Apply-PTF.md
ketchup/: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  status.md
ketchup/src/: k8s.rs  main.rs  output.rs  suse_edge.rs
ketchup/tmp/ketchup-2025-06-11-19-50-32/: kube-system-pods.json  kube-system-pods.yaml
