[package]
name = "ketchup"
version = "0.1.0"
edition = "2024"
authors = ["Your Name <your.email@example.com>"]
description = "A tool to collect Kubernetes cluster configurations"

[dependencies]
# CLI and configuration
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Kubernetes client
kube = { version = "0.87", features = ["client", "config", "derive"] }
k8s-openapi = { version = "0.20", features = ["v1_28"] }

# Error handling
anyhow = "1.0"

# Archive creation
tar = "0.4"
flate2 = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
